# flz4

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flz4.code-workspace  uncompress.c
.github/workflows/: linux.yml  macos.yml  windows.yml
